--- a/public/less/theme/_list-view.less
+++ b/public/less/theme/_list-view.less
@@ -1150,7 +1150,7 @@
 		position: absolute;
     	bottom: 10px;
     	left: 0;
-    	z-index: 2;
+    	z-index: 1;
 	}
 	.flexdatalist-multiple.flexdatalist-multiple{
 	    border-bottom: 0 !important;
